--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,8 @@
     li.navbar {
         color:blue;
         display:none;
+            transition:display 5s linear;
+
     }
     .elem-menubar {
         display:block;
